--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,97 @@
 <html lang="en">
   <head>
     <meta name= "viewport" content="width=device-width, initial-scaler=1" charset="utf-8">
-    <title></title>
+    <title> Chatter </title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+        <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <style media="screen">
+      form {
+        padding: 20px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        padding-right: 50px;
+      }
+
+      #messages {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+      }
+
+      #messages li {
+        padding: 5px 10px;
+      }
+
+      #messages li:nth-child(odd) {
+          background: #eee;
+      }
+    </style>
 
   </head>
   <body>
+    <div class="container-fluid">
+      <div class="row">
+          <ul id="messages"></ul>
+      </div>
+
+        <div class="row">
+            <div class="col-lg-6">
+              <form action="">
+                  <div class="input-group">
+                      <input id="m" autocomplete="off"  type="text" class="form-control" placeholder="Message..." aria-label="Search for...">
+                      <span class="input-group-btn">
+                        <button type="submit" class="btn btn-secondary">send</button>
+                      </span>
+                  </div>
+              </form>
+
+            </div>
+        </div>
+    </div>
+
 
   </body>
   <script src="/socket.io/socket.io.js" charset="utf-8">
   </script>
 
   <script>
-      const socket = io.connect("http://localhost:3000")
-      socket.on("message", data => {
-          console.log(data);
-          socket.emit("another event", {jermemy: "I am great, thank you."})
+      const socket = io()
+
+
+      // send out message
+      let form = document.querySelector("form")
+      let messageInput = document.querySelector("#m")
+      let messageList = document.querySelector("#messages")
+
+      form.addEventListener("submit", (event)=>{
+        event.preventDefault()
+
+        socket.emit("message", messageInput.value)
+        console.log(messageInput.value)
+        messageInput.value = ""
+        return false;
       })
+
+
+      socket.on("connect", ()=>{
+          // emit to everybody
+          socket.emit("message", "user connected")
+      })
+
+      // when receive message
+      socket.on("message", (msg)=>{
+          let msgItem = document.createElement("li")
+          msgItem.innerText = msg
+          console.log(msg);
+
+          messageList.append(msgItem)
+      })
+
   </script>
 </html>
