pen is still working

--- a/public/svgBoard.html
+++ b/public/svgBoard.html
@@ -37,7 +37,6 @@
       <button id="addLayer"> addLayer </button>
       <button id="color"> color </button>
       <button id="pen"> pen </button>
-      <button id="eraser"> eraser </button>
     </div>
     <div id="noteContainer">
       <canvas class="pdfCanvas"></canvas>
@@ -50,7 +49,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.16/svg.min.js" charset="utf-8"></script>
 
-  <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
   <script src="http://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
   <script type="text/javascript">
 
