pen is still working

--- a/public/svgBoard.html
+++ b/public/svgBoard.html
@@ -36,13 +36,13 @@
           <button id="zoom_in"> + </button>
           <button id="zoom_out"> - </button>
           <button id="addLayer"> addLayer </button>
-          <button id="color"> color </button>
+
           <button id="pen"> pen </button>
           <button id="rect"> rect </button>
+          <button id="eraser"> eraser </button>
+          <button id="selector"> selector </button>
       </div>
-      <div class="buttonDetailFunction">
-            <button id="strokeSizeIncreasee" value=5> +5 </button>
-            <button id="strokeSizeDecrease" value=-5> -5 </button>
+      <div class="buttonSubFunction">
       </div>
 
     </div>
@@ -68,7 +68,8 @@
 
   <script src="/socket.io/socket.io.js" charset="utf-8">
   </script>
-  <script src="js/ButtonClass.js" charset="utf-8"></script>
+  <script src="js/ButtonFunctionClass.js" charset="utf-8"></script>
+  <script src="js/drawHelperFunctions.js" charset="utf-8"></script>
   <script src="js/MainController.js" charset="utf-8"></script>
   <script src="js/pdfRender.js" charset="utf-8"></script>
 
