--- a/public/svgBoard.html
+++ b/public/svgBoard.html
@@ -54,7 +54,8 @@
     </div>
 
   </body>
-
+  <script src="/socket.io/socket.io.js" charset="utf-8">
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.16/svg.min.js" charset="utf-8"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
@@ -66,9 +67,11 @@
   </script>
 
 
-  <script src="/socket.io/socket.io.js" charset="utf-8">
-  </script>
-  <script src="js/ButtonFunctionClass.js" charset="utf-8"></script>
+
+<script src="js/socketFunctions.js" charset="utf-8"></script>
+<script src="js/ButtonFunctionClass.js" charset="utf-8"></script>
+  <script src="js/setup.js" charset="utf-8"></script>
+
   <script src="js/drawHelperFunctions.js" charset="utf-8"></script>
   <script src="js/MainController.js" charset="utf-8"></script>
   <script src="js/pdfRender.js" charset="utf-8"></script>
